[gd_scene load_steps=7 format=3 uid="uid://nb4exjwdyrjq"]

[ext_resource type="Script" path="res://EndScreen.gd" id="1_nud28"]
[ext_resource type="Theme" uid="uid://croy53777d46n" path="res://UI_Text_Theme.tres" id="1_p2t3y"]
[ext_resource type="LabelSettings" uid="uid://bkwhsnyjia681" path="res://ScoreLabelTheme.tres" id="2_cnh62"]
[ext_resource type="AudioStream" uid="uid://c82ps08kud3jx" path="res://highscore.wav" id="2_p8prt"]

[sub_resource type="LabelSettings" id="LabelSettings_jokgm"]
font_size = 56

[sub_resource type="LabelSettings" id="LabelSettings_7t7jf"]
font_size = 28

[node name="EndScreen" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_force_pass_scroll_events = false
theme = ExtResource("1_p2t3y")
script = ExtResource("1_nud28")

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer"]
self_modulate = Color(0, 0, 0, 0.784314)
custom_minimum_size = Vector2(448, 160)
layout_mode = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/PanelContainer"]
layout_mode = 2
size_flags_vertical = 4
alignment = 1

[node name="NewHighScore" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
visible = false
layout_mode = 2
text = "New Hi-score!"
label_settings = SubResource("LabelSettings_jokgm")
horizontal_alignment = 1
uppercase = true

[node name="Score" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Score"
label_settings = ExtResource("2_cnh62")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="HighScore" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
text = "Hi-Score"
label_settings = SubResource("LabelSettings_7t7jf")
horizontal_alignment = 1
vertical_alignment = 1
uppercase = true

[node name="Label" type="Label" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/PanelContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="RetryButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_neighbor_left = NodePath("../QuitButton")
focus_neighbor_right = NodePath("../QuitButton")
focus_next = NodePath("../QuitButton")
focus_previous = NodePath("../QuitButton")
mouse_default_cursor_shape = 2
text = "Retry
"

[node name="QuitButton" type="Button" parent="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../RetryButton")
focus_previous = NodePath("../RetryButton")
mouse_default_cursor_shape = 2
text = "Quit
"

[node name="HighScore" type="AudioStreamPlayer" parent="."]
stream = ExtResource("2_p8prt")

[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/RetryButton" to="." method="_on_retry_button_pressed"]
[connection signal="pressed" from="CenterContainer/PanelContainer/VBoxContainer/HBoxContainer/QuitButton" to="." method="_on_quit_button_pressed"]
